// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parses enums 1`] = `
Object {
  "tokens": Array [],
  "type": "success",
  "value": Object {
    "type": "attribute",
    "value": Object {
      "name": "hello",
      "value": "world",
    },
  },
}
`;

exports[`parses enums 2`] = `
Object {
  "tokens": Array [],
  "type": "success",
  "value": Object {
    "type": "name",
    "value": "hello",
  },
}
`;

exports[`parses field references 1`] = `
Object {
  "tokens": Array [],
  "type": "success",
  "value": Object {
    "match": Object {
      "match": Object {
        "match": Object {
          "groups": Array [
            "hello",
          ],
          "position": Object {
            "end": 0,
            "start": 0,
          },
          "type": "hello",
          "value": "hello",
        },
        "reference": Object {
          "name": "Token.hello",
          "type": "token",
        },
        "type": "token",
      },
      "pattern": Object {
        "type": "reference",
        "value": Object {
          "name": "Token.hello",
          "type": "token",
        },
      },
      "type": "reference",
    },
    "reference": Object {
      "fieldName": "name",
      "nodeName": "Root",
      "type": "field",
    },
    "type": "field",
  },
}
`;

exports[`parses many 1`] = `
Object {
  "tokens": Array [],
  "type": "success",
  "value": Object {
    "match": Array [],
    "pattern": Object {
      "type": "many",
      "value": Object {
        "type": "reference",
        "value": Object {
          "name": "Token.hello",
          "type": "token",
        },
      },
    },
    "type": "many",
  },
}
`;

exports[`parses many 2`] = `
Object {
  "tokens": Array [],
  "type": "success",
  "value": Object {
    "match": Array [
      Object {
        "match": Object {
          "match": Object {
            "groups": Array [
              "hello",
            ],
            "position": Object {
              "end": 0,
              "start": 0,
            },
            "type": "hello",
            "value": "hello",
          },
          "reference": Object {
            "name": "Token.hello",
            "type": "token",
          },
          "type": "token",
        },
        "pattern": Object {
          "type": "reference",
          "value": Object {
            "name": "Token.hello",
            "type": "token",
          },
        },
        "type": "reference",
      },
      Object {
        "match": Object {
          "match": Object {
            "groups": Array [
              "hello",
            ],
            "position": Object {
              "end": 0,
              "start": 0,
            },
            "type": "hello",
            "value": "hello",
          },
          "reference": Object {
            "name": "Token.hello",
            "type": "token",
          },
          "type": "token",
        },
        "pattern": Object {
          "type": "reference",
          "value": Object {
            "name": "Token.hello",
            "type": "token",
          },
        },
        "type": "reference",
      },
      Object {
        "match": Object {
          "match": Object {
            "groups": Array [
              "hello",
            ],
            "position": Object {
              "end": 0,
              "start": 0,
            },
            "type": "hello",
            "value": "hello",
          },
          "reference": Object {
            "name": "Token.hello",
            "type": "token",
          },
          "type": "token",
        },
        "pattern": Object {
          "type": "reference",
          "value": Object {
            "name": "Token.hello",
            "type": "token",
          },
        },
        "type": "reference",
      },
    ],
    "pattern": Object {
      "type": "many",
      "value": Object {
        "type": "reference",
        "value": Object {
          "name": "Token.hello",
          "type": "token",
        },
      },
    },
    "type": "many",
  },
}
`;

exports[`parses option 1`] = `
Object {
  "tokens": Array [],
  "type": "success",
  "value": Object {
    "pattern": Object {
      "type": "option",
      "value": Object {
        "type": "reference",
        "value": Object {
          "fieldName": "name",
          "nodeName": "Root",
          "type": "field",
        },
      },
    },
    "type": "option",
  },
}
`;

exports[`parses option 2`] = `
Object {
  "tokens": Array [],
  "type": "success",
  "value": Object {
    "match": Object {
      "match": Object {
        "match": Object {
          "match": Object {
            "match": Object {
              "groups": Array [
                "hello",
              ],
              "position": Object {
                "end": 0,
                "start": 0,
              },
              "type": "hello",
              "value": "hello",
            },
            "reference": Object {
              "name": "Token.hello",
              "type": "token",
            },
            "type": "token",
          },
          "pattern": Object {
            "type": "reference",
            "value": Object {
              "name": "Token.hello",
              "type": "token",
            },
          },
          "type": "reference",
        },
        "reference": Object {
          "fieldName": "name",
          "nodeName": "Root",
          "type": "field",
        },
        "type": "field",
      },
      "pattern": Object {
        "type": "reference",
        "value": Object {
          "fieldName": "name",
          "nodeName": "Root",
          "type": "field",
        },
      },
      "type": "reference",
    },
    "pattern": Object {
      "type": "option",
      "value": Object {
        "type": "reference",
        "value": Object {
          "fieldName": "name",
          "nodeName": "Root",
          "type": "field",
        },
      },
    },
    "type": "option",
  },
}
`;

exports[`parses or 1`] = `
Object {
  "tokens": Array [],
  "type": "success",
  "value": Object {
    "match": Object {
      "match": Object {
        "match": Object {
          "groups": Array [
            "hello",
          ],
          "position": Object {
            "end": 0,
            "start": 0,
          },
          "type": "hello",
          "value": "hello",
        },
        "reference": Object {
          "name": "Token.hello",
          "type": "token",
        },
        "type": "token",
      },
      "pattern": Object {
        "type": "reference",
        "value": Object {
          "name": "Token.hello",
          "type": "token",
        },
      },
      "type": "reference",
    },
    "pattern": Object {
      "type": "or",
      "value": Array [
        Object {
          "type": "reference",
          "value": Object {
            "name": "Token.hello",
            "type": "token",
          },
        },
        Object {
          "type": "reference",
          "value": Object {
            "name": "Token.world",
            "type": "token",
          },
        },
      ],
    },
    "type": "or",
  },
}
`;

exports[`parses or 2`] = `
Object {
  "tokens": Array [],
  "type": "success",
  "value": Object {
    "match": Object {
      "match": Object {
        "match": Object {
          "groups": Array [
            "world",
          ],
          "position": Object {
            "end": 0,
            "start": 0,
          },
          "type": "world",
          "value": "world",
        },
        "reference": Object {
          "name": "Token.world",
          "type": "token",
        },
        "type": "token",
      },
      "pattern": Object {
        "type": "reference",
        "value": Object {
          "name": "Token.world",
          "type": "token",
        },
      },
      "type": "reference",
    },
    "pattern": Object {
      "type": "or",
      "value": Array [
        Object {
          "type": "reference",
          "value": Object {
            "name": "Token.hello",
            "type": "token",
          },
        },
        Object {
          "type": "reference",
          "value": Object {
            "name": "Token.world",
            "type": "token",
          },
        },
      ],
    },
    "type": "or",
  },
}
`;

exports[`parses records 1`] = `
Object {
  "tokens": Array [],
  "type": "success",
  "value": Object {
    "name": "hello",
    "value": "world",
  },
}
`;

exports[`parses records 2`] = `
Object {
  "tokens": Array [],
  "type": "success",
  "value": Object {
    "attribute": Object {
      "name": "hello",
      "value": "world",
    },
  },
}
`;

exports[`parses sequences 1`] = `
Object {
  "tokens": Array [],
  "type": "success",
  "value": Object {
    "match": Array [
      Object {
        "match": Object {
          "match": Object {
            "groups": Array [
              "hello",
            ],
            "position": Object {
              "end": 0,
              "start": 0,
            },
            "type": "hello",
            "value": "hello",
          },
          "reference": Object {
            "name": "Token.hello",
            "type": "token",
          },
          "type": "token",
        },
        "pattern": Object {
          "type": "reference",
          "value": Object {
            "name": "Token.hello",
            "type": "token",
          },
        },
        "type": "reference",
      },
      Object {
        "match": Object {
          "match": Object {
            "groups": Array [
              "world",
            ],
            "position": Object {
              "end": 0,
              "start": 0,
            },
            "type": "world",
            "value": "world",
          },
          "reference": Object {
            "name": "Token.world",
            "type": "token",
          },
          "type": "token",
        },
        "pattern": Object {
          "type": "reference",
          "value": Object {
            "name": "Token.world",
            "type": "token",
          },
        },
        "type": "reference",
      },
    ],
    "pattern": Object {
      "type": "sequence",
      "value": Array [
        Object {
          "type": "reference",
          "value": Object {
            "name": "Token.hello",
            "type": "token",
          },
        },
        Object {
          "type": "reference",
          "value": Object {
            "name": "Token.world",
            "type": "token",
          },
        },
      ],
    },
    "type": "sequence",
  },
}
`;

exports[`parses token references 1`] = `
Object {
  "tokens": Array [],
  "type": "success",
  "value": Object {
    "match": Object {
      "groups": Array [
        "hello",
      ],
      "position": Object {
        "end": 0,
        "start": 0,
      },
      "type": "hello",
      "value": "hello",
    },
    "reference": Object {
      "name": "Token.hello",
      "type": "token",
    },
    "type": "token",
  },
}
`;

exports[`parses token references 2`] = `
Object {
  "tokens": Array [],
  "type": "success",
  "value": Object {
    "match": Object {
      "match": Object {
        "groups": Array [
          "hello",
        ],
        "position": Object {
          "end": 0,
          "start": 0,
        },
        "type": "hello",
        "value": "hello",
      },
      "reference": Object {
        "name": "Token.hello",
        "type": "token",
      },
      "type": "token",
    },
    "pattern": Object {
      "type": "reference",
      "value": Object {
        "name": "Token.hello",
        "type": "token",
      },
    },
    "type": "reference",
  },
}
`;
